paragrafo a mais adicionado

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá,Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio deleniti similique in pariatur nam maiores aliquam quos voluptatum provident exercitationem sint eos, amet ipsa consequuntur iusto, aperiam a possimus! Sint.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel alias hic quasi rem odit dignissimos? Labore deleniti iste, nesciunt aut quibusdam illum neque consequatur eveniet a earum velit. Ad, delectus!</p>
 </body>
 </html>
